infra/istio/fastapi-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: fastapi-virtualservice
spec:
  hosts:
    - "*"
  gateways:
    - fastapi-gateway
  http:
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: fastapi-service
            port:
              number: 80
